<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_vertical_margin"
              android:gravity="center"
              android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_text"

            />

        <EditText
            android:id="@+id/edit_text_login_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/login_edit"
            android:nextFocusDown="@+id/edit_text_login_passwd"/>


        <TextView
            android:id="@+id/text_view_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/passwd_text_description"
            android:text="@string/passwd_text"

            />

        <EditText
            android:id="@id/edit_text_login_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/passwd_edit"
            android:inputType="textPassword"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account_text"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"/>

    </LinearLayout>

</LinearLayout>